# nosql-e-commerce-store

./: README.md  app.ipynb  app.py  init_products_db.py  products.csv  purchases_schema.json  pyproject.toml  streamlit_test.py
